--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
+    "google-auth-library": "^0.9.8",
+    "googleapis": "^11.0.0",
     "mongodb": "^2.2.0",
     "multer": "^1.1.0"
   },
